--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ input.search-form:hover {
 .navbar {
   border-radius: 0;
   margin-bottom: 0;
-  background: #e5dfce;
+  background-image : linear-gradient(to bottom, white, #e5dfce);
   padding: 15px 0;
   padding-bottom: 0;
 }
